<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>keyboard_teleop</name>
  <version>0.0.0</version>
  <description>A text-based interface to send a robot movement commands.</description>

  <maintainer email="tony.najjar.1997@gmail.com">Tony Najjar</maintainer>
  <license>MIT</license>

  <author email="tony.najjar.1997@gmail.com">Tony Najjar</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>pynput-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
